[package]
name = "day01"
version = "0.1.0"
edition = "2021"
authors = ["aRustyDev <AoC@gh.arusty.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
part1 = []
part2 = []

[dependencies]
regex = "1.5.4"

[[bin]]
path = "src/part1.rs"
name = "part1"

[[bin]]
path = "src/part2.rs"
name = "part2"